<resources>
    <string name="app_name">Cruz_Taracaya_Romani</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">¿No tienes cuenta? Regístrate aquí</string>
    <string name="error_contrasena_corta">La contraseña debe tener al menos 8 caracteres</string>
    <string name="registro">Registro de Usuario</string>
    <string name="celular">Número de Celular</string>
    <string name="email">Email</string>
    <string name="registrarses">Registrarse </string>
    <string name="usuario">Usuario</string>
    <string name="default_web_client_id">TU_WEB_CLIENT_ID</string>
    <string name="usuario_o_email">Usuario o Email</string>
    <string name="si_ya_tienes_cuenta_inicia_sesi_n">Si ya tienes cuenta, inicia sesión</string>
    <string name="o_inicia_con">O inicia con</string>
    <string name="mostrar_lista_de_reportes">Mostrar lista de reportes</string>
    <string name="centrar_en_mi_ubicaci_n">Centrar en mi ubicación</string>
    <string name="a_adir_reporte">Añadir reporte</string>
    <string name="describa_lo_que_ocurri">Describa lo que ocurrió...</string>
    <string name="descripci_n_detallada">Descripción detallada:</string>
    <string name="tipo_de_incidente">Tipo de incidente:</string>
    <string name="ubicaci_n_seleccionada">Ubicación seleccionada:</string>
</resources>